Update behaviour roadmap

--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -35,8 +35,8 @@ data. For more details on this specific project, see the [movement roadmap](http
 
 **No current ETA**
 
-- A common interface to common-pose estimation tools, and other machine-learning based object detection methods
-- A common interface to behavioural syllable classification methods
+- A common interface to prevalent pose estimation tools, and other machine-learning based object detection methods
+- A common interface to methods for behavioural segmentation and classification
 
 ## Extracellular electrophysiology analysis
 **Current status**
