--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -79,7 +79,7 @@ For full details, please see the [BrainGlobe roadmap](https://brainglobe.info/co
 **Current status**
 
 Currently, our data analysis tools are restricted to a single modality. It is important that multimodal data can be 
-combined to e.g. correlate neural activity and behaviour. There are some excellent existing packages for neurophysiological 
+combined at the analysis stage e.g. to correlate neural activity and behaviour. There are some excellent existing packages for neurophysiological 
 data analysis (e.g. [pynapple](https://pynapple-org.github.io/pynapple/)) and so we plan to leverage these.
 
 **Q3 2024**
