Add roadmap entry paragraph

--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -1,6 +1,18 @@
 # May 2024
-This roadmap is split into "themes" which roughly mirror our current priorities.
 
+One of our main goals in the team is to provide fully integrated, automated analysis tools for systems neuroscience 
+data. As a researcher, this would mean providing only a set of configurations before running the analysis for an entire 
+dataset, with results and quality metrics output for checking. This will avoid researchers needing to write 
+custom preprocessing and analysis scripts that often duplicate existing efforts, and allows researchers to work 
+together on community tools.
+
+This is a long-term goal, and we are working across multiple themes towards achieving this. We are ensuring [data is 
+organised in a standard way](data_management), a critical step towards automation. Currently, we are focused on 
+building pipelines for [behaviour](behaviour), [electrophysiology](electrophysiology) and [anatomy](anatomy) data that 
+can ingest data from various acquisition systems into a common interface. These are critical steps towards the 
+longer-term goal of multimodal integration. The detailed roadmap is split into these themes below.
+
+(data_management)=
 ## Data management
 **Current status**
 
@@ -21,6 +33,7 @@ Support for customising data structure (e.g. specific mandatory elements or new 
 
 Export of NeuroBlueprint projects to [Neurodata Without Borders](https://www.nwb.org/) format.
 
+(behaviour)=
 ## Behavioural analysis
 **Current status**
 
@@ -38,6 +51,7 @@ data. For more details on this specific project, see the [movement roadmap](http
 - A common interface to prevalent pose estimation tools, and other machine-learning based object detection methods
 - A common interface to methods for behavioural segmentation and classification
 
+(electrophysiology)=
 ## Extracellular electrophysiology analysis
 **Current status**
 
@@ -52,6 +66,7 @@ electrophysiology analysis. For more details on this specific project, see the
 - Support for single experiments and complex multi-animal, multi-session datasets
   (by reading and writing to [NeuroBlueprint](https://neuroblueprint.neuroinformatics.dev/) format)
 
+(anatomy)=
 ## Computational anatomy
 **Current status**
 
