Add to ephys roadmap.

--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -58,7 +58,18 @@ data. For more details on this specific project, see the [movement roadmap](http
 We are currently building [spikewrap](https://github.com/neuroinformatics-unit/spikewrap) (built on top of 
 [SpikeInterface](https://spikeinterface.readthedocs.io/en/latest/)) for simple, routine analysis of extracellular 
 electrophysiology analysis. For more details on this specific project, see the
-[spikewrap roadmap]().
+[spikewrap roadmap](https://github.com/neuroinformatics-unit/spikewrap/issues/178).
+
+**Q3 2024**
+
+Contribute to ongoing SpikeInterface efforts to:
+- [Improve documentation](https://github.com/SpikeInterface/spikeinterface/issues/2046)
+- [Improve](https://github.com/SpikeInterface/spikeinterface/issues/2282) 
+and [standardise](https://github.com/SpikeInterface/spikeinterface/issues/2303) the API
+
+**Q4 2024**
+
+- Implement [inter-session alignment methods](https://github.com/SpikeInterface/spikeinterface/issues/2626) in SpikeInterface.
 
 **Q2 2025**
 
