--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -17,7 +17,7 @@ longer-term goal of multimodal integration. The detailed roadmap is split into t
 **Current status**
 
 We have developed [NeuroBlueprint](https://neuroblueprint.neuroinformatics.dev/), a simple, standard data folder 
-specification for (systems) neuroscience and [datashuttle](datashuttle.neuroinformatics.dev), to automate the 
+specification for (systems) neuroscience and [datashuttle](https://datashuttle.neuroinformatics.dev/), to automate the 
 creation, validation and transfer of NeuroBlueprint projects. For more details on this specific project, see the 
 [datashuttle roadmap]().
 
