--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -110,7 +110,7 @@ data analysis (e.g. [pynapple](https://pynapple-org.github.io/pynapple/)) and so
 
 **Q3 2024**
 
-Export of behavioural timeseries from `movement` in [Neurodata Without Borders](https://www.nwb.org/) format, so it can 
+- Export of behavioural timeseries from `movement` in [Neurodata Without Borders](https://www.nwb.org/) format, so it can 
 be loaded into [pynapple](https://pynapple-org.github.io/pynapple/).
 
 **Q2 2025**
