--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -31,7 +31,7 @@ Support for customising data structure (e.g. specific mandatory elements or new 
 
 **Q4 2025**
 
-Export of NeuroBlueprint projects to [Neurodata Without Borders](https://www.nwb.org/) format.
+Export of NeuroBlueprint projects to [Neurodata Without Borders](https://www.nwb.org/) format
 
 (behaviour)=
 ## Behavioural analysis
@@ -69,7 +69,7 @@ and [standardise](https://github.com/SpikeInterface/spikeinterface/issues/2303) 
 
 **Q4 2024**
 
-- Implement [inter-session alignment methods](https://github.com/SpikeInterface/spikeinterface/issues/2626) in SpikeInterface.
+- Implement [inter-session alignment methods](https://github.com/SpikeInterface/spikeinterface/issues/2626) in SpikeInterface
 
 **Q2 2025**
 
@@ -82,13 +82,14 @@ and [standardise](https://github.com/SpikeInterface/spikeinterface/issues/2303) 
 **Current status**
 
 Our computational anatomy work is based around the [BrainGlobe Initiative](https://brainglobe.info). BrainGlobe is
-centered around the [BrainGlobe Atlas API](https://brainglobe.info/documentation/brainglobe-atlasapi/index.html) which
+centered on the [BrainGlobe Atlas API](https://brainglobe.info/documentation/brainglobe-atlasapi/index.html) which
 provides a common interface to multiple anatomical atlases. Currently, there are tools for:
 - 3D whole brain microscopy registration ([brainreg](https://brainglobe.info/documentation/brainreg/index.html))
 - 3D cell detection in large images ([cellfinder](https://brainglobe.info/documentation/cellfinder/index.html))
 - Analysis of arbitrary shaped structures in atlas space such as lesions and implanted devices
   ([brainglobe-segmentation](https://brainglobe.info/documentation/brainglobe-segmentation/index.html))
-- Visualisation of atlas registered data ([brainrender](https://brainglobe.info/documentation/brainrender/index.html) &
+- Visualisation of atlas registered data ([brainrender](https://brainglobe.info/documentation/brainrender/index.html),
+  [brainrender-napari](https://github.com/brainglobe/brainrender-napari) &
   [brainglobe-heatmap](https://brainglobe.info/documentation/brainglobe-heatmap/index.html))
 - Various small tasks such as [reorienting anatomical images](https://brainglobe.info/documentation/brainglobe-space/index.html)
 
@@ -96,8 +97,8 @@ provides a common interface to multiple anatomical atlases. Currently, there are
 
 BrainGlobe is a large project with many short- and long-term aims. Our two main goals are to:
 - Allow for all neuroscience histology analysis and visualisation tasks to be carried out easily in a single
-  environment. This includes 2D & 3D data in all common animal models
-- Create an end-to-end pipeline to analyse mouse brains imaged with a [mesoSPIM](https://mesospim.org/)
+  environment. This includes 2D & 3D data in all common animal models.
+- Create an end-to-end pipeline to analyse mouse brains imaged with a [mesoSPIM](https://mesospim.org/).
 
 For full details, please see the [BrainGlobe roadmap](https://brainglobe.info/community/roadmaps/index.html).
 
@@ -111,15 +112,15 @@ data analysis (e.g. [pynapple](https://pynapple-org.github.io/pynapple/)) and so
 **Q3 2024**
 
 - Export of behavioural timeseries from `movement` in [Neurodata Without Borders](https://www.nwb.org/) format, so it can 
-be loaded into [pynapple](https://pynapple-org.github.io/pynapple/).
+be loaded into [pynapple](https://pynapple-org.github.io/pynapple/)
 
 **Q2 2025**
 
 - Export of spike times from `spikewrap` in [Neurodata Without Borders](https://www.nwb.org/) format, so it can
-be loaded into [pynapple](https://pynapple-org.github.io/pynapple/).
+be loaded into [pynapple](https://pynapple-org.github.io/pynapple/)
 
 - Integration of `spikewrap` and `brainglobe-segmentation` to use the anatomical location of probe recordings as part of 
-the analysis.
+the analysis
 
 ## Teaching
 **Current status**
