Update link to movement roadmap

--- a/docs/source/roadmaps/may-2024.md
+++ b/docs/source/roadmaps/may-2024.md
@@ -38,7 +38,7 @@ Export of NeuroBlueprint projects to [Neurodata Without Borders](https://www.nwb
 **Current status**
 
 We are building [movement](https://movement.neuroinformatics.dev/) a Python toolbox for analysis of animal tracking 
-data. For more details on this specific project, see the [movement roadmap](https://movement.neuroinformatics.dev/community/roadmap.html).
+data. For more details on this specific project, see the [movement roadmap](https://movement.neuroinformatics.dev/community/roadmaps.html).
 
 **Q3 2025**
 
