--- a/docs/source/roadmaps/june-2024.md
+++ b/docs/source/roadmaps/june-2024.md
@@ -8,7 +8,7 @@ together on community tools.
 
 This is a long-term goal, and we are working across multiple themes towards achieving this. We are ensuring [data is 
 organised in a standard way](data_management), a critical step towards automation. Currently, we are focused on 
-building pipelines for [behaviour](behaviour), [electrophysiology](electrophysiology) and [anatomy](anatomy) data that 
+building pipelines for [behaviour](behaviour), [electrophysiology](electrophysiology) and [anatomy](anatomy) that 
 can ingest data from various acquisition systems into a common interface. These are critical steps towards the 
 longer-term goal of multimodal integration. The detailed roadmap is split into these themes below.
 
