Fix broken links

--- a/docs/source/roadmaps/june-2024.md
+++ b/docs/source/roadmaps/june-2024.md
@@ -19,7 +19,7 @@ longer-term goal of multimodal integration. The detailed roadmap is split into t
 We have developed [NeuroBlueprint](https://neuroblueprint.neuroinformatics.dev/), a simple, standard data folder 
 specification for (systems) neuroscience and [datashuttle](https://datashuttle.neuroinformatics.dev/), to automate the 
 creation, validation and transfer of NeuroBlueprint projects. For more details on these specific projects, see the 
-[NeuroBlueprint](https://neuroblueprint.neuroinformatics.dev/roadmap.html) and 
+[NeuroBlueprint](https://neuroblueprint.neuroinformatics.dev/latest/roadmap.html) and 
 [datashuttle](https://datashuttle.neuroinformatics.dev/pages/community/roadmap.html) roadmaps.
 
 **Q4 2024**
