--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -21,7 +21,7 @@ We are excited to announce our participation in the Google Summer of Code progra
 ## What is Google Summer of Code?
 [Google Summer of Code](https://summerofcode.withgoogle.com/) (GSoC) is a **global online programme** for introducing new developers to open source software. Participants get hands-on experience in real world development, become part of an open source community and also receive a stipend from Google.
 
-In 2025, NIU has been selected as a mentoring organisation. This means we’ll be guiding selected contributors through ~12-week programming projects, pairing them with NIU developers to work on our software tools. So if you’re keen to contribute to open source tools that support neuroscience research, this is your chance!
+In 2025, NIU has been accepted as a mentoring organisation. This means we’ll be guiding selected contributors through 12-week programming projects, pairing them with NIU developers to work on our software tools. So if you’re keen to contribute to open source tools that support neuroscience research, this is your chance!
 
 
 ## How can you participate?
@@ -29,15 +29,15 @@ Please check our [GSoC site](../get-involved/gsoc/index.md) for more details on 
 
 1. **Checking our [project ideas list](../get-involved/gsoc/projects_2025/index.md)**, to see what projects we have on offer. Our projects for GSoC 2025 are organised under [four of our software tools](../get-involved/gsoc/index.md#gsoc-niu-projects-2025). This is not a definitive list, so if you have a project idea that fits within our scope, feel free to propose it!
 
-2. **Prepare your application** following our [guidelines](../get-involved/gsoc/guidelines.md). Our guidelines include a series of tips that will help you write a strong proposal to work with us, and an application template. Make sure you read these carefully before applying.
+2. **Get in touch** with us to discuss your project idea. Potential GSoC contributors are encouraged to get in touch with participating organisations to clarify and better outline the work involved in a project. This will likely strengthen your application - remember that discussing things in the open is a big part of open source. We use [Zulip](https://neuroinformatics.zulipchat.com/) as our main channel of communication. You can start a new topic in our [GSoC channel](https://neuroinformatics.zulipchat.com/#narrow/channel/487898-GSoC) to ask questions to the community. 
 
-3. **Get in touch** with us to discuss your project idea. Potential GSoC contributors are encouraged to get in touch with participating organization to clarify and better outline the work involved in a project. This will likely strengthen your application - remember that discussing things in the open is a big part of open source. We use [Zulip](https://neuroinformatics.zulipchat.com/) as our main channel of communication. You can find the link to the most relevant Zulip channel under the project ideas list of each tool. Please always use the same name when getting a [Zulip](https://neuroinformatics.zulipchat.com/) account, when registering for the program, and when submitting your project plan. 
+3. **Prepare your application** following our [guidelines](../get-involved/gsoc/guidelines.md). Our guidelines include a series of tips that will help you write a strong proposal to work with us, and an application template with the requirements. Make sure you read these carefully before applying! Remember you will need to link a code contribution to your application, and your project proposal should be discussed with the mentors and the community in our wiki. Check the guidelines for more details!
 
 4. **Submit your application to the GSoC system**. Remember to submit your application before [the 8th April deadline](https://developers.google.com/open-source/gsoc/timeline#april_8_-_1800_utc)! All applications must go through [Google's application system](https://summerofcode.withgoogle.com/) - please do not send any applications directly to the NIU team.
 
-We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules#:~:text=from%20the%20Program.-,GSoC%20Contributors.,-Eligibility.), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [GSoC website](https://summerofcode.withgoogle.com/). 
+We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules#:~:text=from%20the%20Program.-,GSoC%20Contributors.,-Eligibility.), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [official GSoC website](https://summerofcode.withgoogle.com/). 
 
-We would like to make the most of the global, fully-remote aspect of this program and we actively encourage applications from students from underrepresented groups in STEM, and from all over the world! We are committed to providing a welcoming and supportive environment for all contributors. Our working languages are Python and English, but we also speak other languages - you can find the languages spoken by the mentors in each of the projects' descriptions.
+We would like to make the most of the global, fully-remote aspect of this program and we actively encourage applications from students from underrepresented groups in STEM, and from all over the world! We are committed to providing a welcoming and supportive environment for all contributors. Our working languages are English and Python :P, but we also speak other languages - you can find the languages spoken by the mentors in each of the projects' descriptions.
 
 ## Get in touch!
 
