--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -11,9 +11,12 @@
 *Join us over the summer and contribute to open-source neuroscience tools*
 
 ```{image} /_static/blog_images/gsoc2025/GSoC-icon.svg
-:align: center
-:width: 75%
+:width: 40%
 ```
+```{image} /_static/logo_light.png
+:width: 33%
+```
+
 <br>
 
 We are excited to announce our participation in the Google Summer of Code program for 2025!
