Remove anchor from rules

--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -38,7 +38,7 @@ Please check our [GSoC site](../get-involved/gsoc/index.md) for more details on 
 
 4. **Submit your application to the GSoC system**. Remember to submit your application before [the 8th April deadline](https://developers.google.com/open-source/gsoc/timeline#april_8_-_1800_utc)! All applications must go through [Google's application system](https://summerofcode.withgoogle.com/) - please do not send any applications directly to the NIU team.
 
-We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules#:~:text=from%20the%20Program.-,GSoC%20Contributors.,-Eligibility.), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [official GSoC website](https://summerofcode.withgoogle.com/). 
+We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [official GSoC website](https://summerofcode.withgoogle.com/). 
 
 We would like to make the most of the global, fully-remote aspect of this program and we actively encourage applications from students from underrepresented groups in STEM, and from all over the world! We are committed to providing a welcoming and supportive environment for all contributors. Our working languages are English and Python :P, but we also speak other languages - you can find the languages spoken by the mentors in each of the projects' descriptions.
 
