--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -30,7 +30,7 @@ In 2025, NIU has been accepted as a mentoring organisation. This means we’ll b
 ## How can you participate?
 Please check our [GSoC site](../get-involved/gsoc/index.md) for more details on the program and how to apply to work with us. In short, the process involves:
 
-1. **Checking our [project ideas list](../get-involved/gsoc/projects_2025/index.md)**, to see what projects we have on offer. Our projects for GSoC 2025 are organised under [four of our software tools](../get-involved/gsoc/index.md#gsoc-niu-projects-2025). This is not a definitive list, so if you have a project idea that fits within our scope, feel free to propose it!
+1. **Checking our [project ideas list](../get-involved/gsoc/projects_2025/index.md)**, to see what projects we have on offer. Our projects for GSoC 2025 are organised under [four of our software tools](../get-involved/gsoc/index.md#gsoc-niu-projects-2025). This is not a definitive list, so if you have a project idea that fits within our scope, feel free to propose it.
 
 2. **Get in touch** with us to discuss your project idea. Potential GSoC contributors are encouraged to get in touch with participating organisations to clarify and better outline the work involved in a project. This will likely strengthen your application - remember that discussing things in the open is a big part of open source. We use [Zulip](https://neuroinformatics.zulipchat.com/) as our main channel of communication. You can start a new topic in our [GSoC channel](https://neuroinformatics.zulipchat.com/#narrow/channel/487898-GSoC) to ask questions to the community. 
 
@@ -40,7 +40,7 @@ Please check our [GSoC site](../get-involved/gsoc/index.md) for more details on 
 
 We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [official GSoC website](https://summerofcode.withgoogle.com/). 
 
-We would like to make the most of the global, fully-remote aspect of this program and we actively encourage applications from students from underrepresented groups in STEM, and from all over the world! We are committed to providing a welcoming and supportive environment for all contributors. Our working languages are English and Python :P, but we also speak other languages - you can find the languages spoken by the mentors in each of the projects' descriptions.
+We would like to make the most of the global, fully-remote aspect of this program and we actively encourage applications from students from underrepresented groups in STEM, and from all over the world! We are committed to providing a welcoming and supportive environment for all contributors. Our working languages are English (and Python 😉), but we also speak other languages - you can find the languages spoken by the mentors in each of the projects' descriptions.
 
 ## Get in touch!
 
