--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -10,12 +10,11 @@
 # We are participating in Google Summer of Code 2025!
 *Join us over the summer and contribute to open-source neuroscience tools*
 
-```{image} /_static/blog_images/gsoc2025/GSoC-icon.svg
-:width: 40%
+```{image} /_static/blog_images/gsoc2025/gsoc-niu.png
+:align: center
+:width: 50%
 ```
-```{image} /_static/logo_light.png
-:width: 33%
-```
+
 
 <br>
 
