find and replace to point to the latest version of movement website

--- a/docs/source/roadmaps/june-2024.md
+++ b/docs/source/roadmaps/june-2024.md
@@ -38,8 +38,8 @@ Export of NeuroBlueprint projects to [Neurodata Without Borders](https://www.nwb
 ## Behavioural analysis
 **Current status**
 
-We are building [movement](https://movement.neuroinformatics.dev/) a Python toolbox for analysis of animal tracking 
-data. For more details on this specific project, see the [movement roadmap](https://movement.neuroinformatics.dev/community/roadmaps.html).
+We are building [movement](https://movement.neuroinformatics.dev/latest/) a Python toolbox for analysis of animal tracking 
+data. For more details on this specific project, see the [movement roadmap](https://movement.neuroinformatics.dev/latest/community/roadmaps.html).
 
 **Q3 2025**
 
