Update GSoC pages following GSoC 2025

--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -29,7 +29,7 @@ In 2025, NIU has been accepted as a mentoring organisation. This means we’ll b
 ## How can you participate?
 Please check our [GSoC page](../get-involved/gsoc/index.md) for more details on the program and how to apply to work with us. In short, the process involves:
 
-1. **Checking our [project ideas list](../get-involved/gsoc/projects_2025/index.md)**, to see what projects we have on offer. Our projects for GSoC 2025 are organised under [four of our software tools](../get-involved/gsoc/index.md#gsoc-niu-projects-2025). This is not a definitive list, so if you have a project idea that fits within our scope, feel free to propose it.
+1. **Checking our [project ideas list](../get-involved/gsoc/2025/index)**, to see what projects we have on offer. Our projects for GSoC 2025 are organised under [four of our software tools](../get-involved/gsoc/2025/projects/index). This is not a definitive list, so if you have a project idea that fits within our scope, feel free to propose it.
 
 2. **Get in touch** with us to discuss your project idea. Potential GSoC contributors are encouraged to get in touch with participating organisations to clarify and better outline the work involved in a project. This will likely strengthen your application - remember that discussing things in the open is a big part of open source. We use [Zulip](https://neuroinformatics.zulipchat.com/) as our main channel of communication. You can start a new topic in our [GSoC channel](https://neuroinformatics.zulipchat.com/#narrow/channel/487898-GSoC) to ask questions to the community. 
 
