added preview image

--- a/docs/source/_static/blog_images/python_code_skeletonisation_and_node_selection/python_code_pose_estimation_skeleton.ipynb
+++ b/docs/source/_static/blog_images/python_code_skeletonisation_and_node_selection/python_code_pose_estimation_skeleton.ipynb
@@ -42,7 +42,7 @@
     "from PIL import Image\n",
     "\n",
     "# Open the image\n",
-    "img = Image.open(\"/Users/jyotibhogal/Documents/GitHub/NIU_Open_Software_Week_2025/Day_5/EGCG5_40_2018_10_19_Mask.tif\")\n",
+    "img = Image.open(\"../docs/source/_static/blog_images/sam2/input_masked_images/EGCG5_40_2018_10_19_Mask.tif\")\n",
     "\n",
     "# Display the image\n",
     "img.show()"
