remove broken link from old blog

--- a/docs/source/blog/gsoc2025.md
+++ b/docs/source/blog/gsoc2025.md
@@ -35,7 +35,7 @@ Please check our [GSoC page](../get-involved/gsoc/index.md) for more details on 
 
 3. **Prepare your application** following our [guidelines](../get-involved/gsoc/guidelines.md). Our guidelines include a series of tips that will help you write a strong proposal to work with us, and an application template with the requirements. Make sure you read these carefully before applying! Remember you will need to link a code contribution to your application, and your project proposal should be discussed with the mentors and the community in our wiki. Check the guidelines for more details!
 
-4. **Submit your application to the GSoC system**. Remember to submit your application before [the 8th April deadline](https://developers.google.com/open-source/gsoc/timeline#april_8_-_1800_utc)! All applications must go through [Google's application system](https://summerofcode.withgoogle.com/) - please do not send any applications directly to the NIU team.
+4. **Submit your application to the GSoC system**. Remember to submit your application before the 8th April deadline! All applications must go through [Google's application system](https://summerofcode.withgoogle.com/) - please do not send any applications directly to the NIU team.
 
 We also recommend checking the full [eligibility requirements for contributors](https://summerofcode.withgoogle.com/rules), the program [timeline](https://developers.google.com/open-source/gsoc/timeline) and further details on the [official GSoC website](https://summerofcode.withgoogle.com/). 
 
